--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.nn {
+  height: 100vh;
+  border-radius: 30px;
+  background: #fafafa;
+  box-shadow: 5px 5px 19px #646464,
+      -5px -5px 19px #ffffff;
+}
+
+.nnn {
+  border-radius: 5px;
+  background: #fafafa;
+  box-shadow: 5px 5px 19px #afadad,
+      -5px -5px 19px #ffffff;
+}
+
+.inp {
+  border-radius: 20px;
+  padding: 5px;
+  font-size: 0.9rem;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  padding-inline: 0.5em;
+  padding-block: 0.7em;
+  border: none;
+}
+
+.nnn3 {
+  margin-top: 0px;
+  border-radius: 0px;
+  background: #f7f3f3;
+  box-shadow: 5px 5px 0px #c7c3c3,
+      -5px -5px 0px #ffffff;
+}
+
+.nnn2 {
+  border-radius: 31px;
+  background: #fafafa;
+  box-shadow: 5px 5px 19px #646464,
+      -5px -5px 19px #ffffff;
+}
